--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
     <div id="stats-container"></div>
 
     <script src="./js/lib/three.js"></script>
-    <script src="./js/lib/OBJLoader.js"></script>
-    <script src="./js/lib/MTLLoader.js"></script>
+    <!-- <script src="./js/lib/OBJLoader.js"></script>
+    <script src="./js/lib/MTLLoader.js"></script> -->
     <script src="./js/lib/stats.js"></script>
     <script src="./js/game/init.js"></script>
 </body>
