--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <script src="./js/lib/three.js"></script>
     <!-- <script src="./js/lib/OBJLoader.js"></script>
     <script src="./js/lib/MTLLoader.js"></script> -->
+    <script src="./js/lib/FirstPersonControls.js"></script>
     <script src="./js/lib/stats.js"></script>
     <script src="./js/game/init.js"></script>
 </body>
