--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,12 @@
     <div id="stats-container"></div>
 
     <script src="./js/lib/three.js"></script>
-    <!-- <script src="./js/lib/OBJLoader.js"></script>
-    <script src="./js/lib/MTLLoader.js"></script> -->
-    <script src="./js/lib/FirstPersonControls.js"></script>
+    <script src="./js/lib/OBJLoader.js"></script>
+    <script src="./js/lib/MTLLoader.js"></script>
+    <!-- <script src="./js/lib/ammo.js"></script> -->
     <script src="./js/lib/stats.js"></script>
+    <script src="./js/lib/physi.js"></script>
+    <script src="./js/lib/FirstPersonControls.js"></script>
     <script src="./js/game/init.js"></script>
 </body>
 
