--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,11 @@
     <script src="./js/lib/three.js"></script>
     <script src="./js/lib/OBJLoader.js"></script>
     <script src="./js/lib/MTLLoader.js"></script>
-    <!-- <script src="./js/lib/ammo.js"></script> -->
     <script src="./js/lib/stats.js"></script>
     <script src="./js/lib/physi.js"></script>
+    <script src="./js/lib/TrackballControls.js"></script>
     <script src="./js/lib/FirstPersonControls.js"></script>
+    <script src="./js/lib/ThirdPersonControls.js"></script>
     <script src="./js/game/init.js"></script>
 </body>
 
