--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,8 @@
     <script src="./js/lib/MTLLoader.js"></script>
     <script src="./js/lib/stats.js"></script>
     <script src="./js/lib/physi.js"></script>
-    <script src="./js/lib/TrackballControls.js"></script>
-    <script src="./js/lib/FirstPersonControls.js"></script>
     <script src="./js/lib/ThirdPersonControls.js"></script>
+    <script src="./js/game/lynx.js"></script>
     <script src="./js/game/init.js"></script>
 </body>
 
