--- a/src/index.html
+++ b/src/index.html
@@ -20,16 +20,16 @@
     <div id="loading">
         <svg width="100%" height="100%" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
             <circle cx="80" cy="200" r="20" fill="#4285F4">
-                <animateMotion path="M0,0 L0,20 L0,0" begin="0s" dur="1.4s" repeatCount="indefinite"></animateMotion>
+                <!-- <animateMotion path="M0,0 L0,20 L0,0" begin="0s" dur="1.4s" repeatCount="indefinite"></animateMotion> -->
             </circle>
             <circle cx="160" cy="200" r="20" fill="#0F9D58">
-                <animateMotion path="M0,0 L0,20 L0,0" begin="0.25s" dur="1.4s" repeatCount="indefinite"></animateMotion>
+                <!-- <animateMotion path="M0,0 L0,20 L0,0" begin="0.25s" dur="1.4s" repeatCount="indefinite"></animateMotion> -->
             </circle>
             <circle cx="240" cy="200" r="20" fill="#F4B400">
-                <animateMotion path="M0,0 L0,20 L0,0" begin="0.5s" dur="1.4s" repeatCount="indefinite"></animateMotion>
+                <!-- <animateMotion path="M0,0 L0,20 L0,0" begin="0.5s" dur="1.4s" repeatCount="indefinite"></animateMotion> -->
             </circle>
             <circle cx="320" cy="200" r="20" fill="#DB4437">
-                <animateMotion path="M0,0 L0,20 L0,0"begin="0.75s"  dur="1.4s" repeatCount="indefinite"></animateMotion>
+                <!-- <animateMotion path="M0,0 L0,20 L0,0"begin="0.75s"  dur="1.4s" repeatCount="indefinite"></animateMotion> -->
             </circle>
         </svg>
     </div>
