--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
     </div>
     <div id="promt"></div>
 
+    <div id="identity">
+        <img src="/img/merchant_cat.jpg" alt="merchant_cat">
+        <span>Merchant cat</span>
+    </div>
+
     <div id="loading">
         <svg width="100%" height="100%" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
             <circle cx="80" cy="200" r="20" fill="#4285F4">
@@ -33,6 +38,8 @@
             </circle>
         </svg>
     </div>
+
+    <audio id="music" src="/asset/audio/bg.mp3" loop="true"></audio>
 
     <!-- lib -->
     <script src="./js/lib/three.js"></script>
