--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
     <!-- HUD -->
     <div id="health">
     </div>
-    <div id="promt"></div>
+    <div id="dialog" class="msg"></div>
+    <div id="promt" class="msg"></div>
 
     <div id="identity">
         <img src="/img/merchant_cat.jpg" alt="merchant_cat">
@@ -41,7 +42,12 @@
 
     <!-- game -->
     <script src="./js/game/lynx.js"></script>
-    <script src="./js/game/PlayerControls.js"></script>
+    <script src="./js/game/Builder.js"></script>
+    <script src="./js/game/CameraCtrl.js"></script>
+    <script src="./js/game/Player.js"></script>
+    <script src="./js/game/PlayerCtrl.js"></script>
+    <script src="./js/game/NpcCtrl.js"></script>
+    <script src="./js/game/NPC.js"></script>
     <script src="./js/game/HeadUpDisplay.js"></script>
     <script src="./js/game/PlotCtrl.js"></script>
     <script src="./js/game/World.js"></script>
