--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Advantures</title>
     <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
 </head>
 
@@ -14,8 +15,110 @@
     <div id="stats"></div>
 
     <!-- HUD -->
-    <div id="health">
+
+    <ul id="points">
+        <li><span class="icon-moneybag"></span><span id="money">0</span></li>
+        <li><span class="icon-heart"></span><span id="health">0</span></li>
+    </ul>
+
+    <ul id="tools">
+        <li id="task"><span class="icon-date_range"></span></li>
+        <li id="good"><span class="icon-cube"></span></li>
+    </ul>
+
+    <div id="taskList">
+        <div class="mission">
+            <div class="title">
+                <span class="icon-radio_button_unchecked"></span>
+                <span>Welcome</span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div>
+        <div class="mission">
+            <!-- <div class="title">
+                <span class="icon-check_circle"></span>
+                <span>Welcome</span>
+            </div>
+            <div class="description">
+                4f65as4df564sdf54as6f4d46f46464af4
+                fa4s56f4da56f
+                as4df564asdf6dads4f
+                asdf4546df
+            </div> -->
+        </div>
     </div>
+
+    <div id="goodList">
+        <div class="good">
+            <div class="title">
+                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div><div class="good">
+            <div class="title">
+                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div><div class="good">
+            <div class="title">
+                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div><div class="good">
+            <div class="title">
+                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div><div class="good">
+            <div class="title">
+                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div><div class="good">
+            <div class="title">
+                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div><div class="good">
+            <div class="title">
+                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div>
+    </div>
+
     <div id="dialog" class="msg"></div>
     <div id="promt" class="msg"></div>
 
