--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </ul>
 
     <div id="taskList">
-        <div class="mission">
+        <!-- <div class="mission">
             <div class="title">
                 <span class="icon-radio_button_unchecked"></span>
                 <span>Welcome</span>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="mission">
-            <!-- <div class="title">
+            <div class="title">
                 <span class="icon-check_circle"></span>
                 <span>Welcome</span>
             </div>
@@ -46,12 +46,12 @@
                 fa4s56f4da56f
                 as4df564asdf6dads4f
                 asdf4546df
-            </div> -->
-        </div>
+            </div>
+        </div> -->
     </div>
 
     <div id="goodList">
-        <div class="good">
+        <!-- <div class="good">
             <div class="title">
                 <img src="/img/merchant_cat.jpg" alt="merchant_cat">
                 <span class="count">5</span>
@@ -116,7 +116,7 @@
             <div class="description">
                 654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
             </div>
-        </div>
+        </div> -->
     </div>
 
     <div id="dialog" class="msg"></div>
