--- a/src/index.html
+++ b/src/index.html
@@ -149,6 +149,7 @@
     <script src="./js/game/CameraCtrl.js"></script>
     <script src="./js/game/Player.js"></script>
     <script src="./js/game/PlayerCtrl.js"></script>
+    <script src="./js/game/MonsterCtrl.js"></script>
     <script src="./js/game/NpcCtrl.js"></script>
     <script src="./js/game/NPC.js"></script>
     <script src="./js/game/HeadUpDisplay.js"></script>
