--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,29 @@
     </div>
 
     <div id="dialog" class="msg"></div>
-    <div id="promt" class="msg"></div>
+    <div class="contain">
+        <div class="box">
+            <div class="face">
+                <img src="/img/monster1.png" alt="monster1">
+            </div>
+            <div class="face">
+                <img src="/img/monster2.png" alt="monster2">
+            </div>
+            <div class="face">
+                <img src="/img/monster3.png" alt="monster3">
+            </div>
+            <div class="face">
+                <img src="/img/monster4.png" alt="monster4">
+            </div>
+            <div class="face">
+                <img src="/img/monster5.png" alt="monster5">
+            </div>
+            <div class="face">
+                <img src="/img/monster6.png" alt="monster6">
+            </div>
+        </div>
+    </div>
+    <div id="promt" class="animated"></div>
 
     <div id="identity">
         <img src="/img/merchant_cat.jpg" alt="merchant_cat">
