Add rolling box.

--- a/src/index.html
+++ b/src/index.html
@@ -121,28 +121,28 @@
 
     <div id="dialog" class="msg"></div>
     <div class="contain">
-        <div class="box">
+        <div class="cube">
             <div class="face">
-                <img src="/img/monster1.png" alt="monster1">
+                <img src="/img/cube1.png" alt="cube1">
             </div>
             <div class="face">
-                <img src="/img/monster2.png" alt="monster2">
+                <img src="/img/cube2.png" alt="cube2">
             </div>
             <div class="face">
-                <img src="/img/monster3.png" alt="monster3">
+                <img src="/img/cube3.png" alt="cube3">
             </div>
             <div class="face">
-                <img src="/img/monster4.png" alt="monster4">
+                <img src="/img/cube4.png" alt="cube4">
             </div>
             <div class="face">
-                <img src="/img/monster5.png" alt="monster5">
+                <img src="/img/cube5.png" alt="cube5">
             </div>
             <div class="face">
-                <img src="/img/monster6.png" alt="monster6">
+                <img src="/img/cube6.png" alt="cube6">
             </div>
         </div>
     </div>
-    <div id="promt" class="animated"></div>
+    <div id="promt" class="animated flipInY"></div>
 
     <div id="identity">
         <img src="/img/merchant_cat.jpg" alt="merchant_cat">
