--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
         </div>
     </div>
 
-    <div id="dialog" class="msg"></div>
+    <div id="dialog" class="animated flipInX"></div>
 
     <div id="pause" class="animated flipInY hidden">
         <span class="icon-pause"></span>
@@ -165,6 +165,7 @@
         <h1 id="load-wait" class="visible">Pleas wait for a sceond...</h1>
         <h1 id="load-end" class="animated fade hidden">Press any key to begin.</h1>
     </div>
+
 
     <!-- <audio id="music" src="/asset/audio/bg.mp3" loop="true"></audio> -->
     <!-- <div id="identity">
