--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,10 @@
     <ul id="tools">
         <li id="task"><span class="icon-date_range"></span></li>
         <li id="good"><span class="icon-cube"></span></li>
+        <li id="help"><span class="icon-help"></span></li>
     </ul>
 
-    <div id="taskList">
+    <div id="taskList" class="hidden">
         <div class="mission">
             <div class="title">
                 <span class="icon-radio_button_unchecked"></span>
@@ -50,7 +51,7 @@
         </div>
     </div>
 
-    <div id="goodList">
+    <div id="goodList" class="hidden">
         <div class="good">
             <div class="title">
                 <img src="/img/merchant_cat.jpg" alt="merchant_cat">
@@ -119,6 +120,8 @@
         </div>
     </div>
 
+
+
     <div id="dialog" class="animated flipInX"></div>
 
     <div id="pause" class="animated flipInY hidden">
@@ -166,6 +169,67 @@
         <h1 id="load-end" class="animated fade hidden">Press any key to begin.</h1>
     </div>
 
+    <div id="helpList" class="">
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-info"></span>
+                <span class="name">About</span>
+            </div>
+            <div class="content animated">
+                Cat Go - A WebGL Game.
+            </div>
+        </div>
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-mouse"></span>
+                <span class="name">Mouse</span>
+            </div>
+            <div class="content animated">
+                Mouse move - Look around.
+                Mouse down - Talk to npc or collect goods.
+            </div>
+        </div>
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-keyboard"></span>
+                <span class="name">Keyboard</span>
+            </div>
+            <div class="content animated">
+                W - Move forward.<br/>
+                A - Move left.<br/>
+                S - Move backward.<br/>
+                D - Move right.<br/>
+                Enter - Talk.<br/>
+                Space - Pause.<br/>
+            </div>
+        </div>
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-date_range"></span>
+                <span class="name">Task List</span>
+            </div>
+            <div class="content animated">
+                Show each task of player.<br/>
+                <span class="icon-radio_button_unchecked"></span> - Task accepted.<br/>
+                <span class="icon-check_circle"></span> - Task completed.<br/>
+            </div>
+        </div>
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-cube"></span>
+                <span class="name">Bag</span>
+            </div>
+            <div class="content animated">
+                Show goods player collected.
+                Click one item to use it.
+            </div>
+        </div>
+    </div>
 
     <!-- <audio id="music" src="/asset/audio/bg.mp3" loop="true"></audio> -->
     <!-- <div id="identity">
