--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <li id="help"><span class="icon-help"></span></li>
     </ul>
 
-    <div id="taskList" class="hidden">
+    <div id="taskList" class="animated slideInLeft hidden">
         <div class="mission">
             <div class="title">
                 <span class="icon-radio_button_unchecked"></span>
@@ -43,74 +43,15 @@
                 <span>Welcome</span>
             </div>
             <div class="description">
-                4f65as4df564sdf54as6f4d46f46464af4
-                fa4s56f4da56f
-                as4df564asdf6dads4f
-                asdf4546df
+                4f65as4df564sdf54as6f4d46f46464af4 fa4s56f4da56f as4df564asdf6dads4f asdf4546df
             </div>
         </div>
     </div>
 
-    <div id="goodList" class="hidden">
+    <div id="goodList" class="animated slideInLeft hidden">
         <div class="good">
             <div class="title">
-                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div><div class="good">
-            <div class="title">
-                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div><div class="good">
-            <div class="title">
-                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div><div class="good">
-            <div class="title">
-                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div><div class="good">
-            <div class="title">
-                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div><div class="good">
-            <div class="title">
-                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div><div class="good">
-            <div class="title">
-                <img src="/img/merchant_cat.jpg" alt="merchant_cat">
+                <span class="icon icon-help"></span>
                 <span class="count">5</span>
                 <span class="name">catfood </span>
             </div>
@@ -118,9 +59,122 @@
                 654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
             </div>
         </div>
+        <div class="good">
+            <div class="title">
+                <span class="icon icon-help"></span>
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div>
+        <div class="good">
+            <div class="title">
+                <span class="icon icon-help"></span>
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div>
+        <div class="good">
+            <div class="title">
+                <span class="icon icon-help"></span>
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
+            </div>
+        </div>
+        <div class="good">
+            <div class="title">
+                <span class="icon icon-help"></span>
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4ffads4dfasf asf46f54fa4ffads4dfasf asf46f54fa4f
+            </div>
+        </div>
+        <div class="good">
+            <div class="title">
+                <span class="icon icon-help"></span>
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s
+            </div>
+        </div>
+        <div class="good">
+            <div class="title">
+                <span class="icon icon-help"></span>
+                <span class="count">5</span>
+                <span class="name">catfood </span>
+            </div>
+            <div class="description">
+                654444444444a5df4s4df6s4fd6s
+            </div>
+        </div>
     </div>
 
-
+    <div id="helpList" class="animated slideInLeft hidden">
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-info"></span>
+                <span class="name">About</span>
+            </div>
+            <div class="content animated">
+                Cat Go - A WebGL Game.
+            </div>
+        </div>
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-mouse"></span>
+                <span class="name">Mouse</span>
+            </div>
+            <div class="content animated">
+                Mouse move - Look around. Mouse down - Talk to npc or collect goods.
+            </div>
+        </div>
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-keyboard"></span>
+                <span class="name">Keyboard</span>
+            </div>
+            <div class="content animated">
+                W - Move forward.<br/> A - Move left.<br/> S - Move backward.<br/> D - Move right.<br/> Enter - Talk.<br/> Space - Pause.<br/>
+            </div>
+        </div>
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-date_range"></span>
+                <span class="name">Task List</span>
+            </div>
+            <div class="content animated">
+                Show each task of player.<br/>
+                <span class="icon-radio_button_unchecked"></span> - Task accepted.<br/>
+                <span class="icon-check_circle"></span> - Task completed.<br/>
+            </div>
+        </div>
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-cube"></span>
+                <span class="name">Bag</span>
+            </div>
+            <div class="content animated">
+                Show goods player collected. Click one item to use it.
+            </div>
+        </div>
+    </div>
 
     <div id="dialog" class="animated flipInX"></div>
 
@@ -169,67 +223,7 @@
         <h1 id="load-end" class="animated fade hidden">Press any key to begin.</h1>
     </div>
 
-    <div id="helpList" class="">
-        <div class="help-item">
-            <input type="radio" name="helpitem">
-            <div class="title animated">
-                <span class="icon icon-info"></span>
-                <span class="name">About</span>
-            </div>
-            <div class="content animated">
-                Cat Go - A WebGL Game.
-            </div>
-        </div>
-        <div class="help-item">
-            <input type="radio" name="helpitem">
-            <div class="title animated">
-                <span class="icon icon-mouse"></span>
-                <span class="name">Mouse</span>
-            </div>
-            <div class="content animated">
-                Mouse move - Look around.
-                Mouse down - Talk to npc or collect goods.
-            </div>
-        </div>
-        <div class="help-item">
-            <input type="radio" name="helpitem">
-            <div class="title animated">
-                <span class="icon icon-keyboard"></span>
-                <span class="name">Keyboard</span>
-            </div>
-            <div class="content animated">
-                W - Move forward.<br/>
-                A - Move left.<br/>
-                S - Move backward.<br/>
-                D - Move right.<br/>
-                Enter - Talk.<br/>
-                Space - Pause.<br/>
-            </div>
-        </div>
-        <div class="help-item">
-            <input type="radio" name="helpitem">
-            <div class="title animated">
-                <span class="icon icon-date_range"></span>
-                <span class="name">Task List</span>
-            </div>
-            <div class="content animated">
-                Show each task of player.<br/>
-                <span class="icon-radio_button_unchecked"></span> - Task accepted.<br/>
-                <span class="icon-check_circle"></span> - Task completed.<br/>
-            </div>
-        </div>
-        <div class="help-item">
-            <input type="radio" name="helpitem">
-            <div class="title animated">
-                <span class="icon icon-cube"></span>
-                <span class="name">Bag</span>
-            </div>
-            <div class="content animated">
-                Show goods player collected.
-                Click one item to use it.
-            </div>
-        </div>
-    </div>
+
 
     <!-- <audio id="music" src="/asset/audio/bg.mp3" loop="true"></audio> -->
     <!-- <div id="identity">
