--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,11 @@
         </div>
     </div>
 
+    <div id="empty" class="animated shake hidden">
+        <img src="/img/cube5.png" alt="">
+        <h1>空空如也~</h1>
+    </div>
+
     <div id="dialog" class="animated flipInX"></div>
 
     <div id="pause" class="animated flipInY hidden">
@@ -219,13 +224,13 @@
             </div>
         </div>
 
-        <h1 id="load-wait" class="visible">Pleas wait for a sceond...</h1>
-        <h1 id="load-end" class="animated fade hidden">Press any key to begin.</h1>
+        <span id="hint" class="animated">Pleas wait for a sceond...</span>
+
+        <!-- <h1 id="load-wait" class="visible">Pleas wait for a sceond...</h1>
+        <h1 id="load-end" class="animated fade hidden">Press any key to begin.</h1> -->
     </div>
 
-
-
-    <!-- <audio id="music" src="/asset/audio/bg.mp3" loop="true"></audio> -->
+    <audio id="music"></audio>
     <!-- <div id="identity">
         <img src="/img/merchant_cat.jpg" alt="merchant_cat">
         <span>Merchant cat</span>
