Add resize event.

--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
                 <span class="name">Mouse</span>
             </div>
             <div class="content animated">
-                Mouse move - Look around. Mouse down - Talk to npc or collect goods.
+                Mouse move - Look around.<br/> Click - Talk to npc or collect goods.
             </div>
         </div>
         <div class="help-item">
@@ -149,7 +149,7 @@
                 <span class="name">Keyboard</span>
             </div>
             <div class="content animated">
-                W - Move forward.<br/> A - Move left.<br/> S - Move backward.<br/> D - Move right.<br/> Enter - Talk.<br/> Space - Pause.<br/>
+                W - Move forward.<br/> A - Strafe left.<br/> S - Move backward.<br/> D - Strafe right.<br/> Enter - Talk.<br/> Space Bar - Pause.<br/>
             </div>
         </div>
         <div class="help-item">
