--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
         <h1>空空如也~</h1>
     </div>
 
-    <div id="dialog" class="animated flipInX"></div>
+    <div id="dialog" class="animated flipInX hidden"></div>
 
     <div id="pause" class="animated flipInY hidden">
         <span class="icon-pause"></span>
@@ -225,12 +225,10 @@
         </div>
 
         <span id="hint" class="animated">Pleas wait for a sceond...</span>
-
-        <!-- <h1 id="load-wait" class="visible">Pleas wait for a sceond...</h1>
-        <h1 id="load-end" class="animated fade hidden">Press any key to begin.</h1> -->
     </div>
 
     <audio id="music"></audio>
+
     <!-- <div id="identity">
         <img src="/img/merchant_cat.jpg" alt="merchant_cat">
         <span>Merchant cat</span>
