add game over, game clear.

--- a/src/index.html
+++ b/src/index.html
@@ -195,6 +195,16 @@
         </div>
     </div>
 
+    <div id="gameover" class="animated shake hidden">
+        <img src="/img/cube6.png" alt="">
+        <h1>You are dead~</h1>
+    </div>
+
+    <div id="gameclear" class="animated shake hidden">
+        <img src="/img/cube5.png" alt="">
+        <h1>You WIN!</h1>
+    </div>
+
     <div id="welcome" class="cover">
         <div class="logo">
             <img src="/img/logo1.png" alt="logo">
