--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,16 @@
     <div id="stats"></div>
 
     <!-- HUD -->
+    <div id="hurt-effect" class="cover animated fade hidden"></div>
 
     <ul id="points">
         <li><span class="icon-moneybag"></span><span id="money">0</span></li>
         <li><span class="icon-heart"></span><span id="health">0</span></li>
+    </ul>
+
+    <ul id="tips">
+        <!-- <li>获得金币<span class="icon-times"></span>1</li>
+        <li>获得树叶5555<span class="icon-times"></span>1</li> -->
     </ul>
 
     <ul id="tools">
@@ -234,7 +240,7 @@
             </div>
         </div>
 
-        <span id="hint" class="animated">Pleas wait for a sceond...</span>
+        <span id="progress" class="animated">Pleas wait for a sceond...</span>
     </div>
 
     <audio id="music"></audio>
