add walking sound.

--- a/src/index.html
+++ b/src/index.html
@@ -33,99 +33,9 @@
         <li id="help"><span class="icon-help"></span></li>
     </ul>
 
-    <div id="taskList" class="animated slideInLeft hidden">
-        <div class="mission">
-            <div class="title">
-                <span class="icon-radio_button_unchecked"></span>
-                <span>Welcome</span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div>
-        <div class="mission">
-            <div class="title">
-                <span class="icon-check_circle"></span>
-                <span>Welcome</span>
-            </div>
-            <div class="description">
-                4f65as4df564sdf54as6f4d46f46464af4 fa4s56f4da56f as4df564asdf6dads4f asdf4546df
-            </div>
-        </div>
-    </div>
+    <div id="taskList" class="animated slideInLeft hidden"></div>
 
-    <div id="goodList" class="animated slideInLeft hidden">
-        <div class="good">
-            <div class="title">
-                <span class="icon icon-help"></span>
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div>
-        <div class="good">
-            <div class="title">
-                <span class="icon icon-help"></span>
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div>
-        <div class="good">
-            <div class="title">
-                <span class="icon icon-help"></span>
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div>
-        <div class="good">
-            <div class="title">
-                <span class="icon icon-help"></span>
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4f
-            </div>
-        </div>
-        <div class="good">
-            <div class="title">
-                <span class="icon icon-help"></span>
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s 46as5f46s4df fads4dfasf asf46f54fa4ffads4dfasf asf46f54fa4ffads4dfasf asf46f54fa4f
-            </div>
-        </div>
-        <div class="good">
-            <div class="title">
-                <span class="icon icon-help"></span>
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s
-            </div>
-        </div>
-        <div class="good">
-            <div class="title">
-                <span class="icon icon-help"></span>
-                <span class="count">5</span>
-                <span class="name">catfood </span>
-            </div>
-            <div class="description">
-                654444444444a5df4s4df6s4fd6s
-            </div>
-        </div>
-    </div>
+    <div id="goodList" class="animated slideInLeft hidden"></div>
 
     <div id="helpList" class="animated slideInLeft hidden">
         <div class="help-item">
@@ -156,6 +66,16 @@
             </div>
             <div class="content animated">
                 W - Move forward.<br/> A - Strafe left.<br/> S - Move backward.<br/> D - Strafe right.<br/> Enter - Talk.<br/> Space Bar - Pause.<br/>
+            </div>
+        </div>
+        <div class="help-item">
+            <input type="radio" name="helpitem">
+            <div class="title animated">
+                <span class="icon icon-music"></span>
+                <span class="name">Sound</span>
+            </div>
+            <div class="content animated">
+                <span id="sound" class="icon icon-sound-alt"></span>
             </div>
         </div>
         <div class="help-item">
