add merchant's shop.

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <ul id="points">
         <li><span class="icon-moneybag"></span><span id="money">0</span></li>
         <li><span class="icon-heart"></span><span id="health">0</span></li>
+        <li><span class="icon-bones"></span><span id="attack">0</span></li>
     </ul>
 
     <ul id="tips">
@@ -106,6 +107,8 @@
         <img src="/img/cube5.png" alt="">
         <h1>空空如也~</h1>
     </div>
+
+    <div id="shop" class="animated flipInX hidden"></div>
 
     <div id="dialog" class="animated flipInX hidden"></div>
 
