--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                 <span class="name">Keyboard</span>
             </div>
             <div class="content animated">
-                W - Move forward.<br/> A - Strafe left.<br/> S - Move backward.<br/> D - Strafe right.<br/> Enter - Talk.<br/> Space Bar - Pause.<br/>
+                W - Move forward.<br/> A - Strafe left.<br/> S - Move backward.<br/> D - Strafe right.<br/> Z - Attack.<br/> Enter - Talk.<br/> Space Bar - Pause.<br/>
             </div>
         </div>
         <div class="help-item">
